[tool.poetry]
name = "oop-4"
version = "0.1.0"
description = ""
authors = ["helendddd <137448299+helendddd@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.0"
pytest = "^8.3.4"
isort = "^5.13.2"
pre-commit = "^4.0.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
